# ScorbiumDashboard

./: .env.example  .gitignore  .postman.json  Dockerfile  LICENSE  README.md  TODO.md  debug_miniapp.py  docker-compose.prod.yml  docker-compose.yml  fix_alembic.py  fix_migrations.sh  main  main.py  migrate_encrypt_secrets.py  migrate_to_pasarguard.py  pyproject.toml  requirements.txt  resetdb.py  setup.sh  test.sh  todo  update.sh
.kiro/hooks/: api-postman-testing.kiro.hook
alembic/: env.py
alembic/versions/: 4d5f8377eff0_initial_schema.py  a1b2c3d4e5f6_add_user_language.py  a1b2c3d4e5f7_add_admin_backup_codes.py  b3c4d5e6f7a8_add_user_autorenew.py  c4d5e6f7a8b9_add_payment_type.py  c5d6e7f8a9b0_add_performance_indexes.py  d5e6f7a8b9c0_add_admins_table.py  e6f7a8b9c0d1_add_admin_features.py  f1a2b3c4d5e6_add_admin_totp.py
app/: main.py  main_bot.py
app/api/: dependencies.py  middleware_prometheus.py
app/api/middleware/: __init__.py  csrf.py  rate_limit.py
app/api/miniapp/: __init__.py  views.py
app/api/panel/: __init__.py  views.py
app/api/v1/: __init__.py  auth.py  broadcasts.py  (+11 more)
app/cli/: __main__.py  bot.py  db.py  main.py  payments.py  plans.py  subs.py  system.py  users.py
app/core/: config.py  database.py  detail.py  exceptions.py  permissions.py  server.py
app/factory/: db_factory.py
app/models/: __init__.py  admin.py  audit_log.py  base.py  bot_settings.py  broadcast.py  payment.py  plan.py  promo.py  referral.py  subscription.py  support.py  user.py  vpn_key.py
app/schemas/: __init__.py  broadcast.py  payment.py  plan.py  promo.py  support.py  user.py  vpn.py
app/services/: __init__.py  admin.py  aikassa.py  alerts.py  audit.py  base_payment.py  bot_settings.py  broadcast.py  cryptobot.py  encryption.py  export.py  freekassa.py  health.py  i18n.py  metrics.py  notification.py  payment.py  paypalych.py  plan.py  platega.py  promo.py  referral.py  slow_query.py  subscription.py  support.py  system_metrics.py  telegram_notify.py  telegram_stars.py  user.py  vpn_key.py  vpn_panel_interface.py  yookassa.py
app/tasks/: payment_tasks.py  vpn_tasks.py
app/templates/: 2fa_login.html  admins.html  audit.html  backup.html  base.html  broadcasts.html  dashboard.html  forbidden.html  keyboard_editor.html  login.html  monitoring.html  nodes.html  notifications.html  pasarguard.html  payments.html  payments_stats.html  plans.html  promos.html  referrals.html  remnawave.html  subscriptions.html  support.html  telegram.html  two_fa.html  user_detail.html  users.html  vpn.html
app/utils/: html_utils.py  log.py  path.py  rate_limit.py  security.py
docs/: README.md  configuration.md  faq.md  installation.md  introduction.md  panel.md  pasarguard.md  payments.md  quick-start.md  telegram-bot.md  update.md
nginx/: README.md  nginx.conf  nginx.conf.http_only  nginx.conf.template  nginx.local.conf
requirements/: todo
scripts/: scorbdev
(+78 files in other folders)
