[project]
name = "vpn-dashboard"
version = "1.5.0"
description = "VPN Dashboard — Telegram bot + FastAPI backend"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    # Web
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.30.0",
    # Database
    "sqlalchemy>=2.0.0",
    "asyncpg>=0.29.0",
    "alembic>=1.13.0",
    # Config & validation
    "pydantic>=2.7.0",
    "pydantic-settings>=2.3.0",
    # Telegram bot
    "aiogram>=3.10.0",
    "aiohttp>=3.9.0",
    # Payments
    "yookassa>=3.0.0",
    # HTTP client
    "httpx>=0.27.0",
    # Auth
    "python-jose[cryptography]>=3.3.0",
    "passlib[bcrypt]>=1.7.4",
    # Logging
    "loguru>=0.7.2",
    # Utils
    "python-multipart>=0.0.9",
    "jose>=1.0.0",
    "greenlet>=3.3.2",
    # Templates
    "jinja2>=3.1.0",
    "aiofiles>=23.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "httpx>=0.27.0",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
