[project]
name = "vpn-dashboard"
version = "1.4.2"
description = "VPN Dashboard — Telegram bot + FastAPI backend"
requires-python = ">=3.13"
dependencies = [
    # Web
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.30.0",
    # Database
    "sqlalchemy>=2.0.0",
    "asyncpg>=0.29.0",
    "alembic>=1.13.0",
    # Config & validation
    "pydantic>=2.7.0",
    "pydantic-settings>=2.3.0",
    # Telegram bot
    "aiogram>=3.10.0",
    "aiohttp>=3.9.0",
    # Payments
    "yookassa>=3.0.0",
    # HTTP client
    "httpx>=0.27.0",
    # Auth
    "python-jose[cryptography]>=3.3.0",
    "bcrypt>=4.0.0",
    # Logging
    "loguru>=0.7.2",
    # Utils
    "python-multipart>=0.0.9",
    "jose>=1.0.0",
    "greenlet>=3.3.2",
    # Templates
    "jinja2>=3.1.0",
    "aiofiles>=23.0.0",
    "openpyxl>=3.1.0",
    # 2FA
    "pyotp>=2.9.0",
    "qrcode[pil]>=7.4.0",
    # Monitoring
    "psutil>=5.9.0",
    "prometheus-client>=0.20.0",
    "sentry-sdk[fastapi]>=2.0.0",
    # CLI
    "click>=8.1.0",
    "rich>=13.0.0",
]

[project.scripts]
scorbium = "app.cli.main:cli"

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "httpx>=0.27.0",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app"]

[tool.uv]
package = true
